[package]
name = "ootrmwd"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
derivative = "2"
either = "1"
futures = "0.3"
rand = "0.8"
#rocket = "0.5.0-rc.3"
thiserror = "1"
tokio-tungstenite = "0.20"

[dependencies.async-proto]
version = "0.16.10"
features = ["chrono"]

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "std"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.log-lock]
git = "https://github.com/fenhl/log-lock"
branch = "main"

[dependencies.multiworld]
path = "../multiworld"
features = ["sqlx"]

[dependencies.multiworld-derive]
path = "../multiworld-derive"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "trust-dns"]

[dependencies.ring]
version = "0.16"
features = ["std"]

[dependencies.rocket] # required for WebSocket support
git = "https://github.com/SergioBenitez/Rocket"
branch = "master"

[dependencies.rocket-util]
git = "https://github.com/fenhl/rocket-util"
branch = "rocket-master"

[dependencies.rocket_ws]
git = "https://github.com/SergioBenitez/Rocket"
branch = "master"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
default-features = false
features = ["model", "rustls_backend"]

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["chrono", "postgres", "runtime-tokio-rustls"]

[dependencies.tokio]
version = "1"
features = ["macros", "net", "parking_lot", "process", "rt-multi-thread", "sync", "time"]

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
features = ["reqwest", "rocket-master", "serde", "serde_json"]

[target.'cfg(unix)'.dependencies.ootr-utils]
git = "https://github.com/midoshouse/rust-ootr-utils"
branch = "main"
