[package]
name = "ootrmwd"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
async-proto = { version = "0.24", features = ["chrono"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
derivative = "2"
futures = "0.3"
itermore = { version = "0.7.1", features = ["array_combinations"] }
log-lock = { git = "https://github.com/fenhl/log-lock", branch = "main" }
multiworld = { path = "../multiworld", features = ["sqlx"] }
multiworld-derive = { path = "../multiworld-derive" }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["charset", "hickory-dns", "http2", "macos-system-configuration", "rustls-tls"] }
ring = { version = "0.17", features = ["std"] }
rocket = "0.5"
rocket-util = { git = "https://github.com/fenhl/rocket-util", branch = "main" }
rocket_ws = "0.1"
serde = { version = "1", features = ["derive"] }
serenity = { version = "0.12", default-features = false, features = ["model", "rustls_backend"] }
sqlx = { version = "0.8", default-features = false, features = ["chrono", "postgres", "runtime-tokio-rustls"] }
thiserror = "1"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "net", "parking_lot", "process", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.21" # waiting for https://github.com/rwf2/Rocket/pull/2823
wheel = { git = "https://github.com/fenhl/wheel", branch = "main", features = ["reqwest", "rocket", "serde", "serde_json", "serde_json_path_to_error"] }

[target.'cfg(unix)'.dependencies]
either = "1"
ootr-utils = { git = "https://github.com/midoshouse/rust-ootr-utils", branch = "main" }

[build-dependencies]
git2 = "0.19"
semver = "1.0.22"
